--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,12 +2,15 @@
 # shellcheck disable=SC1001,SC1012
 
 hide_window_decorations yes
-background_opacity 0.75
-window_padding_width 25
-font_family JetBrains Mono
-font_size 24
+background_opacity 0.9
+window_padding_width 16
+font_family SFMono Nerd Font
+font_size 16
 disable_ligatures never
 
+map cmd+, send_text all \x02,
+map cmd+, send_text all \x02:
+map cmd+. send_text all \x1b\x20\x2e\x0a
 map cmd+1 send_text all \x021
 map cmd+2 send_text all \x022
 map cmd+3 send_text all \x023
@@ -17,147 +20,30 @@ map cmd+6 send_text all \x026
 map cmd+7 send_text all \x027
 map cmd+8 send_text all \x028
 map cmd+9 send_text all \x029
-map cmd+, send_text all \x02,
+map cmd+[ send_text all \x0f
+map cmd+] send_text all \x09
 map cmd+e send_text all \x02\"
-map cmd+shift+e send_text all \x02%
-map cmd+shift+f send_text all \x02\x5b\x2f
 map cmd+f send_text all lfcd\n
 map cmd+g send_text all \x02g
-map cmd+shift+g send_text all \x02G
 map cmd+j send_text all \x02\x54
 map cmd+k send_text all \x02\x54
 map cmd+l send_text all \x02L
-map cmd+[ send_text all \x0f
-map cmd+shift+[ send_text all \x02p
 map cmd+o send_text all \x02u
 map cmd+p send_text all :GoToFile\n
-map cmd+shift+p send_text all :GoToCommand\n
-map cmd+. send_text all \x1b\x20\x2e\x0a
-map cmd+q send_text all :q\n
 map cmd+r send_text all \x1b\x5b\x41\x0a
-map cmd+] send_text all \x09
-map cmd+shift+] send_text all \x02n
 map cmd+s send_text all \x1b\x3a\x77\x0a
+map cmd+shift+[ send_text all \x02p
+map cmd+shift+] send_text all \x02n
+map cmd+shift+c send_text all \x02\x20
+map cmd+shift+e send_text all \x02%
+map cmd+shift+f send_text all \x02\x5b\x2f
+map cmd+shift+g send_text all \x02G
+map cmd+shift+p send_text all :GoToCommand\n
 map cmd+shift+s send_text all :wa\n
-map cmd+, send_text all \x02:
+map cmd+shift+v send_text all \x02\x5d
 map cmd+t send_text all \x02c
 map cmd+w send_text all \x02x
 map cmd+z send_text all \x02z
 
-## name:     Catppuccin Kitty Macchiato
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/macchiato.conf
-## blurb:    Soothing pastel theme for the high-spirited!
-
-# The basic colors
-foreground           #CAD3F5
-background           #000004
-selection_foreground #24273A
-selection_background #F4DBD6
-
-# Cursor colors
-cursor            #F4DBD6
-cursor_text_color #24273A
-
-# URL underline color when hovering with mouse
-url_color #F4DBD6
-
-# Kitty window border colors
-active_border_color   #B7BDF8
-inactive_border_color #6E738D
-bell_border_color     #EED49F
-
-# Tab bar colors
-active_tab_foreground   #181926
-active_tab_background   #C6A0F6
-inactive_tab_foreground #CAD3F5
-inactive_tab_background #1E2030
-tab_bar_background      #181926
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #24273A
-mark1_background #B7BDF8
-mark2_foreground #24273A
-mark2_background #C6A0F6
-mark3_foreground #24273A
-mark3_background #7DC4E4
-
-# The 16 terminal colors
-
-# black
-color0 #000000
-color8 #5B6078
-
-# red
-color1 #ED8796
-color9 #ED8796
-
-# green
-color2  #A6DA95
-color10 #A6DA95
-
-# yellow
-color3  #EED49F
-color11 #EED49F
-
-# blue
-color4  #8AADF4
-color12 #8AADF4
-
-# magenta
-color5  #F5BDE6
-color13 #F5BDE6
-
-# cyan
-color6  #8BD5CA
-color14 #8BD5CA
-
-# white
-color7  #B8C0E0
-color15 #A5ADCB
-
-###########################################################
-# Symbols Nerd Font complete symbol_map
-# easily troubleshoot missing/incorrect characters with:
-#   kitty --debug-font-fallback
-###########################################################
-
-# "Nerd Fonts - Pomicons"
-symbol_map U+E000-U+E00D Symbols Nerd Font
-
-# "Nerd Fonts - Powerline"
-symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
-
-# "Nerd Fonts - Powerline Extra"
-symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
-
-# "Nerd Fonts - Symbols original"
-symbol_map U+e5fa-U+e62b Symbols Nerd Font
-
-# "Nerd Fonts - Devicons"
-symbol_map U+e700-U+e7c5 Symbols Nerd Font
-
-# "Nerd Fonts - Font awesome"
-symbol_map U+f000-U+f2e0 Symbols Nerd Font
-
-# "Nerd Fonts - Font awesome extension"
-symbol_map U+e200-U+e2a9 Symbols Nerd Font
-
-# "Nerd Fonts - Octicons"
-symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
-
-# "Nerd Fonts - Font Linux"
-symbol_map U+F300-U+F313 Symbols Nerd Font
-
-#  Nerd Fonts - Font Power Symbols"
-symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
-
-#  "Nerd Fonts - Material Design Icons"
-symbol_map U+f500-U+fd46 Symbols Nerd Font
-
-# "Nerd Fonts - Weather Icons"
-symbol_map U+e300-U+e3eb Symbols Nerd Font
-
-# Misc Code Point Fixes
-symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
+# include additional/symbol-map.conf
+include additional/current-theme.conf
