--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -9,14 +9,9 @@
 # https://starship.rs
 
 [character]
-success_symbol = "[](white)"
-error_symbol = "[](red)"
-vicmd_symbol = "[](green)"
-
-# [directory.substitutions]
-# "dotfiles/.config/fish" = "fish 🐠"
-# "dotfiles/.config/alacritty" = "alacritty 🖥️"
-# "dotfiles/.config/nvim" = "nvim 🎹"
+success_symbol = "[\uf054](white)" # 
+vicmd_symbol = "[\ue62b](white)" # 
+error_symbol = "[\uf467](red)" # 
 
 [directory]
 style = "blue bold"
