feat: show window name

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -67,7 +67,7 @@ set -g @t-bind 'T'
 set -g @t-fzf-prompt '  '
 set -g @tmux-last-prompt-pattern ' '
 set -g @tmux-nerd-font-window-name-shell-icon ''
-set -g @tmux-nerd-font-window-name-show-name false
+set -g @tmux-nerd-font-window-name-show-name true
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'fcsonline/tmux-thumbs'
