--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,11 +23,10 @@ set -g status-interval 3     # update the status bar every 3 seconds
 
 set -g status-left "#[fg=blue,bold]#S"
 set -ga status-left " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
-set -g status-left-length 200            # increase length (from 10)
-set -g status-position top               # macOS / darwin style
-set -g status-right '#{pomodoro_status}' # toggle 25m pomodoro
-set -g status-right-length 6             # decrease length (from 10)
-set -g status-style 'bg=default'         # transparent
+set -g status-left-length 200    # increase length (from 10)
+set -g status-position top       # macOS / darwin style
+set -g status-right ''           # toggle 25m pomodoro
+set -g status-style 'bg=default' # transparent
 
 set -g window-status-current-format '#[fg=magenta]#W'
 set -g window-status-format '#[fg=gray]#W'
@@ -59,10 +58,6 @@ bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
-set -g @pomodoro_cancel '-'    # Cancel a Pomodoro with tmux-prefix key + P
-set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
-set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
-set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
 set -g @t-bind 'T'
 set -g @t-fzf-prompt '  '
 set -g @tmux-last-prompt-pattern ' '
@@ -75,7 +70,6 @@ set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'mskelton/tmux-last'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'tmux-plugins/tpm'
 
 run "$HOME/.tmux/plugins/tpm/tpm" # always at end of file
