feat: update last pager

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,7 +25,7 @@ set -g status-left "#[fg=blue,bold]#S"
 set -ga status-left " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
 set -g status-left-length 200    # increase length (from 10)
 set -g status-position top       # macOS / darwin style
-set -g status-right ''           # toggle 25m pomodoro
+set -g status-right ''           # blank
 set -g status-style 'bg=default' # transparent
 
 set -g window-status-current-format '#[fg=magenta]#W'
@@ -60,7 +60,10 @@ set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open 
 set -g @fzf-url-history-limit '2000'
 set -g @t-bind 'T'
 set -g @t-fzf-prompt '  '
-set -g @tmux-last-prompt-pattern ' '
+set -g @tmux-last-color on
+set -g @tmux-last-pager 'less -r'
+set -g @tmux-last-pager 'less'
+set -g @tmux-last-prompt-pattern ''
 set -g @tmux-nerd-font-window-name-shell-icon ''
 set -g @tmux-nerd-font-window-name-show-name true
 
