feat: hide window name

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -65,7 +65,7 @@ set -g @tmux-last-pager 'less -r'
 set -g @tmux-last-pager 'less'
 set -g @tmux-last-prompt-pattern ''
 set -g @tmux-nerd-font-window-name-shell-icon ''
-set -g @tmux-nerd-font-window-name-show-name true
+set -g @tmux-nerd-font-window-name-show-name false
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'fcsonline/tmux-thumbs'
