--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -1,3 +1,4 @@
+# 
 #
 #  ██████╗ ██╗████████╗███╗   ███╗██╗   ██╗██╗  ██╗
 # ██╔════╝ ██║╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
@@ -10,7 +11,7 @@
 
 tmux:
   symbols:
-    branch: 'שׂ '
+    branch: ' '
     hashprefix: ':'
     ahead: ' '
     behind: ' '
