--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -59,6 +59,7 @@ bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 set -g @t-bind 'T'
+set -g @t-fzf-find-binding 'ctrl-f:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
 set -g @t-fzf-prompt '  '
 set -g @tmux-last-color on
 set -g @tmux-last-pager 'less -r'
