fix[nvim]: t plugin git path for contributing

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -70,7 +70,7 @@ set -g @tmux-nerd-font-window-name-show-name false
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'mskelton/tmux-last'
