fix[tmux]: tmux-last comment and tpm path

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -73,7 +73,7 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'mskelton/tmux-last'
+set -g @plugin 'mskelton/tmux-last' # <prefix>t
 set -g @plugin 'tmux-plugins/tpm'
 
-run "$HOME/.tmux/plugins/tpm/tpm" # always at end of file
+run "$HOME/.config/tmux/plugins/tpm/tpm" # always at end of file
