feat: switch to JetBriansMono (Nerd Font v3) font

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -23,16 +23,16 @@ window:
 
 font:
   normal:
-    family: "SFMono Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: Medium
   italic:
-    family: "SFMono Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: Medium Italic
   bold:
-    family: "SFMono Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: Heavy
   bold_italic:
-    family: "SFMono Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: Heavy Italic
   size: 20.0
 
