feat: upgrade to Nerd Font v3 icons

--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -11,18 +11,18 @@
 
 tmux:
   symbols:
-    branch: ' '
+    branch: '󰘬 '
     hashprefix: ':'
-    ahead: ' '
-    behind: ' '
-    staged: '都'
-    conflict: '繁'
-    untracked: ' '
-    modified: ' '
+    ahead: ' '
+    behind: ' '
+    staged: ' '
+    conflict: '󰕚'
+    untracked: ' '
+    modified: ' '
     stashed: ' '
     clean: 'c'
-    insertions: ' '
-    deletions: ' '
+    insertions: ' '
+    deletions: ' '
   styles:
     state: '#[fg=red,nobold]'
     branch: '#[fg=white,nobold]'
@@ -32,7 +32,7 @@ tmux:
     untracked: '#[fg=gray,nobold]'
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=green,nobold]'
-    divergence: '#[fg=yellow,nobold]'
+    divergence: '#[fg=cyan,nobold]'
   layout: [branch, divergence, flags, stats, ' ']
   options:
     branch_max_len: 0
