feat: update untracked gitmux icon

--- a/.config/tmux/gitmux.conf
+++ b/.config/tmux/gitmux.conf
@@ -17,7 +17,7 @@ tmux:
     behind: ' '
     staged: ' '
     conflict: '󰕚'
-    untracked: ' '
+    untracked: '??'
     modified: ' '
     stashed: ' '
     clean: 'c'
