feat: update docker config

--- a/.docker/config.json
+++ b/.docker/config.json
@@ -4,5 +4,10 @@
 	},
 	"credsStore": "desktop",
 	"experimental": "enabled",
-	"currentContext": "desktop-linux"
+	"currentContext": "default",
+	"plugins": {
+		"-x-cli-hints": {
+			"enabled": "true"
+		}
+	}
 }
