--- a/.config/tmux/tmux-nerd-font-window-name.yml
+++ b/.config/tmux/tmux-nerd-font-window-name.yml
@@ -1,7 +1,7 @@
 config:
-  fallback-icon: "?" # icon to use if no definition is found
-  show-name: true # show the window name with the icon
+  fallback-icon: "?"
+  show-name: false
 
 icons:
-  zsh: "" # overwrite with your own symbol (Nerd Font icon, emoji, whatever!)
-  cmatrix: "🤯" # add new entries that aren't included
+  fish: "🐠"
+  nvim: "📝"
