feat: playing around with emojis

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,8 +28,8 @@ set -g status-position top       # macOS / darwin style
 set -g status-right ''           # blank
 set -g status-style 'bg=default' # transparent
 
-set -g window-status-current-format '#[fg=magenta]#W'
-set -g window-status-format '#[fg=gray]#W'
+set -g window-status-current-format '*#[fg=magenta]#W'
+set -g window-status-format ' #[fg=gray]#W'
 
 set -g default-terminal "${TERM}"
 set -g message-command-style bg=default,fg=yellow
@@ -41,8 +41,8 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
-bind g new-window -n '' lazygit
-bind G new-window -n '' gh dash
+bind g new-window -n '🌳' lazygit
+bind G new-window -n '😺' gh dash
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
