--- a/.config/gh-dash/config.yml
+++ b/.config/gh-dash/config.yml
@@ -1,17 +1,17 @@
 qprSections:
   - title: My Pull Requests
-    filters: is:open author:@me -user:Nutiliti
+    filters: is:open author:@me
   - title: Needs My Review
-    filters: is:open review-requested:@me -user:Nutiliti
+    filters: is:open review-requested:@me
   - title: Involved
-    filters: is:open involves:@me -author:@me -user:Nutiliti
+    filters: is:open involves:@me -author:@me
 issuesSections:
   - title: My Issues
-    filters: is:open author:@me -user:Nutiliti
+    filters: is:open author:@me
   - title: Assigned
-    filters: is:open assignee:@me -user:Nutiliti
+    filters: is:open assignee:@me
   - title: Involved
-    filters: is:open involves:@me -author:@me -user:Nutiliti
+    filters: is:open involves:@me -author:@me
 defaults:
   preview:
     open: true
