--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -60,7 +60,7 @@ set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open 
 set -g @fzf-url-history-limit '2000'
 set -g @t-bind 'T'
 set -g @t-fzf-find-binding 'ctrl-f:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
-set -g @t-fzf-prompt '  '
+set -g @t-fzf-prompt '🔭 '
 set -g @tmux-last-color on
 set -g @tmux-last-pager 'less -r'
 set -g @tmux-last-pager 'less'
