chore: switch context

--- a/.docker/config.json
+++ b/.docker/config.json
@@ -4,7 +4,7 @@
 	},
 	"credsStore": "desktop",
 	"experimental": "enabled",
-	"currentContext": "desktop-linux",
+	"currentContext": "default",
 	"plugins": {
 		"-x-cli-hints": {
 			"enabled": "true"
