feat: use set instead of set-option

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,8 +8,8 @@
 # https://github.com/tmux/tmux
 # cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux olimorris
 
-set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -g focus-events on # TODO: learn how this works
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
