--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@
 hide_window_decorations yes
 background_opacity 0.9
 window_padding_width 16
-font_family SFMono Nerd Font
+font_family JetbrainsMono Nerd Font
 font_size 16
 disable_ligatures never
 
