--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,10 +1,4 @@
-# vim:ft=kitty
-
-## name:     Catppuccin Kitty Macchiato
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/macchiato.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+#palette vim:ft=sh
 
 # The basic colors
 foreground           #CAD3F5
