--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,8 +1,4 @@
-## name:     Catppuccin-Frappe
-## author:   Pocco81 (https://github.com/Pocco81)
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/frappe.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+#palette vim:ft=sh
 
 # The basic colors
 foreground           #C6D0F5
