feat: cleanup structure

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,11 +6,12 @@
 #    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 # Terminal multiplexer
 # https://github.com/tmux/tmux
-# cSpell:words christoomey joshmedeski lazygit brightblack nobold gitmux olimorris
 
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -g focus-events on # TODO: learn how this works
+
+# colors
+set -g default-terminal "tmux-256color"
+set -g terminal-overrides ",xterm-256color:RGB"
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
@@ -67,13 +68,19 @@ set -g @tmux-last-pager 'less'
 set -g @tmux-last-prompt-pattern ' '
 set -g @tmux-nerd-font-window-name-shell-icon ''
 set -g @tmux-nerd-font-window-name-show-name false
+set -g @thumbs-command 'echo -n {} | pbcopy' # copy to clipboard
+set -g @thumbs-key C
 
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'fcsonline/tmux-thumbs'
+# my plugins (`git@github.com:` clones with ssh key for development)
 set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'mskelton/tmux-last' # <prefix>t
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 
-run "$HOME/.config/tmux/plugins/tpm/tpm" # always at end of file
+# community plugins
+# TODO: improve formatting or drop
+set -g @plugin 'mskelton/tmux-last'             # <prefix>+t
+set -g @plugin 'christoomey/vim-tmux-navigator' # <ctrl>+hjkl
+set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
+
+set -g @plugin 'tmux-plugins/tpm'        # load tpm
+run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
