--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -75,6 +75,7 @@ set -g @thumbs-key C
 set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
 set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'git@github.com:joshmedeski/tmux-overmind.git'
 
 # community plugins
 # TODO: improve formatting or drop
