refactor(tmux): change gitmux to yaml file

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,7 +23,7 @@ set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
 
 set -g status-left "#[fg=blue,bold]#S"
-set -ga status-left " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
+set -ga status-left " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yaml)"
 set -g status-left-length 200    # increase length (from 10)
 set -g status-position top       # macOS / darwin style
 set -g status-right ''           # blank
