--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,4 +1,3 @@
-
 # ███╗   ██╗███████╗ ██████╗ ███████╗███████╗████████╗ ██████╗██╗  ██╗
 # ████╗  ██║██╔════╝██╔═══██╗██╔════╝██╔════╝╚══██╔══╝██╔════╝██║  ██║
 # ██╔██╗ ██║█████╗  ██║   ██║█████╗  █████╗     ██║   ██║     ███████║
@@ -7,46 +6,38 @@
 # ╚═╝  ╚═══╝╚══════╝ ╚═════╝ ╚═╝     ╚══════╝   ╚═╝    ╚═════╝╚═╝  ╚═╝
 # A command-line system information tool
 # https://github.com/dylanaraps/neofetch
+# https://github.com/Chick2D/neofetch-themes/
+
+# Made by https://github.com/mmsaeed509 (ozozFetch)
+# Customization Wiki https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 
 print_info() {
-    info title
-    info underline
+	info title
+	info underline
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
+	info "${c1} OS" os
+	info "${c1} ├ " distro
+	info "${c1} ├ " kernel
+	info "${c1} ├ " packages
+	info "${c1} └ " shell
+	echo
+	info "${c2} DE/WM" wm
+	info "${c2} ├ " theme
+	info "${c2} ├ " icons
+	info "${c2} └ " term
+	echo
+	info "${c3} PC" model
+	info "${c3} ├ " cpu
+	info "${c3} ├ " gpu
+	info "${c3} ├ " memory
+	info "${c3} ├ " uptime
+	info "${c3} └ " resolution
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
+	info cols
 
-    info cols
 }
 
-# Title
-
+##--------- Title
 
 # Hide/Show Fully qualified domain name.
 #
@@ -55,9 +46,7 @@ print_info() {
 # Flag:     --title_fqdn
 title_fqdn="off"
 
-
-# Kernel
-
+##--------- Kernel
 
 # Shorten the output of the kernel function.
 #
@@ -71,9 +60,7 @@ title_fqdn="off"
 # off: 'Linux 4.8.9-1-ARCH'
 kernel_shorthand="on"
 
-
-# Distro
-
+##--------- Distro
 
 # Shorten the output of the distro function
 #
@@ -95,9 +82,7 @@ distro_shorthand="off"
 # off: 'Arch Linux'
 os_arch="on"
 
-
-# Uptime
-
+##--------- Uptime
 
 # Shorten the output of the uptime function
 #
@@ -111,9 +96,7 @@ os_arch="on"
 # off:  '2 days, 10 hours, 3 minutes'
 uptime_shorthand="on"
 
-
-# Memory
-
+##--------- Memory
 
 # Show memory pecentage in output.
 #
@@ -138,9 +121,7 @@ memory_percent="off"
 # gib: ' 0.98GiB / 6.79GiB'
 memory_unit="mib"
 
-
-# Packages
-
+##--------- Packages
 
 # Show/Hide Package Manager names.
 #
@@ -154,9 +135,7 @@ memory_unit="mib"
 # off:  '908'
 package_managers="on"
 
-
-# Shell
-
+##--------- Shell
 
 # Show the path to $SHELL
 #
@@ -180,9 +159,7 @@ shell_path="off"
 # off: 'bash'
 shell_version="on"
 
-
-# CPU
-
+##--------- CPU
 
 # CPU speed type
 #
@@ -257,11 +234,9 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp="on"
 
-
-# GPU
-
+##--------- GPU
 
 # Enable/Disable GPU Brand
 #
@@ -293,9 +268,7 @@ gpu_brand="on"
 #   GPU1: Intel Integrated Graphics
 gpu_type="all"
 
-
-# Resolution
-
+##--------- Resolution
 
 # Display refresh rate next to each monitor
 # Default: 'off'
@@ -308,9 +281,7 @@ gpu_type="all"
 # off: '1920x1080'
 refresh_rate="off"
 
-
-# Gtk Theme / Icons / Font
-
+##--------- Gtk Theme / Icons / Font
 
 # Shorten output of GTK Theme / Icons / Font
 #
@@ -322,7 +293,6 @@ refresh_rate="off"
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
 gtk_shorthand="off"
-
 
 # Enable/Disable gtk2 Theme / Icons / Font
 #
@@ -346,9 +316,7 @@ gtk2="on"
 # off: 'Numix [GTK2]'
 gtk3="on"
 
-
-# IP Address
-
+##--------- IP Address
 
 # Website to ping for the public IP
 #
@@ -364,9 +332,7 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
-
 # Desktop Environment
-
 
 # Show Desktop Environment version
 #
@@ -375,9 +341,7 @@ public_ip_timeout=2
 # Flag:    --de_version
 de_version="on"
 
-
-# Disk
-
+##--------- Disk
 
 # Which disks to display.
 # The values can be any /dev/sdXX, mount point or directory.
@@ -433,9 +397,7 @@ disk_subtitle="mount"
 # off: 'Disk (/): 74G / 118G'
 disk_percent="on"
 
-
-# Song
-
+##--------- Song
 
 # Manually specify a music player.
 #
@@ -518,9 +480,7 @@ song_shorthand="off"
 # Example: mpc_args=(-h HOST -P PASSWORD)
 mpc_args=()
 
-
-# Text Colors
-
+##--------- Text Colors
 
 # Text Colors
 #
@@ -536,9 +496,7 @@ mpc_args=()
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
 colors=(distro)
 
-
-# Text Options
-
+##--------- Text Options
 
 # Toggle bold text
 #
@@ -559,8 +517,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
-
+underline_char=""
 
 # Info Separator
 # Replace the default separator with the specified string.
@@ -571,11 +528,9 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator="->"
 
-
-# Color Blocks
-
+##--------- Color Blocks
 
 # Color block range
 # The range of colors to print.
@@ -628,8 +583,7 @@ block_height=1
 # col_offset=7      - Leave 7 spaces then print the colors
 col_offset="auto"
 
-# Progress Bars
-
+##--------- Progress Bars
 
 # Bar characters
 #
@@ -671,7 +625,6 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 
-
 # Info display
 # Display a bar with the info.
 #
@@ -692,9 +645,7 @@ memory_display="off"
 battery_display="off"
 disk_display="off"
 
-
-# Backend Settings
-
+##--------- Backend Settings
 
 # Image backend.
 #
@@ -718,9 +669,7 @@ image_backend="ascii"
 #       wallpaper will be used.
 image_source="auto"
 
-
-# Ascii Options
-
+##--------- Ascii Options
 
 # Ascii distro
 # Which distro's ascii art to display.
@@ -779,7 +728,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(1 2 3 4 5 6 7 8)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -789,9 +738,7 @@ ascii_colors=(distro)
 # Flag:    --ascii_bold
 ascii_bold="on"
 
-
-# Image Options
-
+##--------- Image Options
 
 # Image loop
 # Setting this to on will make neofetch redraw the image constantly until
@@ -841,7 +788,7 @@ image_size="auto"
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=2
 
 # Image offsets
 # Only works with the w3m backend.
@@ -861,8 +808,7 @@ xoffset=0
 # Flag:    --bg_color
 background_color=
 
-
-# Misc Options
+##--------- Misc Options
 
 # Stdout mode
 # Turn off all colors and disables image backend (ASCII/Image).
