--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,6 +32,10 @@ set -g status-style 'bg=default' # transparent
 set -g window-status-current-format '*#[fg=magenta]#W'
 set -g window-status-format ' #[fg=gray]#W'
 
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 set -g default-terminal "${TERM}"
 set -g message-command-style bg=default,fg=yellow
 set -g message-style bg=default,fg=yellow
