feat(tmux): remap G bind to run custom ghd script

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,7 +47,7 @@ bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind g new-window -n '🌳' lazygit
-bind G new-window -n '😺' gh dash
+bind G new-window -n '😺' ghd
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
