feat: add new bindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,6 +48,8 @@ bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind g new-window -n '🌳' lazygit
 bind G new-window -n '😺' ghd
+bind B new-window -n '👷' b
+bind D new-window -n '👷' d
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
