feat: update neofetch layout

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -12,29 +12,20 @@
 # Customization Wiki https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 
 print_info() {
-	info title
-	info underline
-
-	info "${c1} OS" os
-	info "${c1} ├ " distro
-	info "${c1} ├ " kernel
-	info "${c1} ├ " packages
-	info "${c1} └ " shell
 	echo
-	info "${c2} DE/WM" wm
-	info "${c2} ├ " theme
-	info "${c2} ├ " icons
-	info "${c2} └ " term
 	echo
-	info "${c3} PC" model
-	info "${c3} ├ " cpu
-	info "${c3} ├ " gpu
-	info "${c3} ├ " memory
-	info "${c3} ├ " uptime
-	info "${c3} └ " resolution
-
+	info "⏰ " uptime
+	info "🍎 " distro
+	info "🤖 " cpu
+	info "🍿 " kernel
+	info "🧠 " memory
+	info "💻 " resolution
+	info "🪟 " wm
+	info "🍻 " packages
+	info "🐠 " shell
+	info "🪟 " term
+	echo
 	info cols
-
 }
 
 ##--------- Title
