feat(tmux): update window name icons

--- a/.config/tmux/tmux-nerd-font-window-name.yml
+++ b/.config/tmux/tmux-nerd-font-window-name.yml
@@ -1,14 +1,14 @@
 config:
-  fallback-icon: "?"
-  multi-pane-icon: ""
+  fallback-icon: "❓"
+  multi-pane-icon: "🪟"
   show-name: false
 
 icons:
-  fish: "🐠"
-  nvim: "📝"
-  stripe: "💳"
-  stripe-mock: "💳"
   btop: "📈"
   bun: "🥟"
   docker: "🐳"
+  fish: "🐠"
+  nvim: "📝"
   overmind: "👀"
+  stripe-mock: "💳"
+  stripe: "💳"
