feat: update starship symbols to emojis

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -9,9 +9,9 @@
 # https://starship.rs
 
 [character]
-success_symbol = "[\uf054](white)" # 
-vicmd_symbol = "[\ue62b](white)" # 
-error_symbol = "[\uf467](red)" # 
+success_symbol = "👉"
+vicmd_symbol = "✌️"
+error_symbol = "🚨"
 
 [directory]
 style = "blue bold"
