feat: update starship characters

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -9,9 +9,9 @@
 # https://starship.rs
 
 [character]
-success_symbol = "👉"
-vicmd_symbol = "✌️"
-error_symbol = "🚨"
+success_symbol = ""
+vicmd_symbol = ""
+error_symbol = "󰩈"
 
 [directory]
 style = "blue bold"
