feat: add sessionx plugin

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -82,6 +82,7 @@ set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'git@github.com:joshmedeski/tmux-fzf-url'
 set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'git@github.com:joshmedeski/tmux-overmind'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 # community plugins
 # TODO: improve formatting or drop
