feat[tmux]: delay display time

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,9 @@
 
 set-option -g focus-events on # TODO: learn how this works
 
+# TODO: find a way to toggle this?
+set-option -g display-time 3000
+
 # colors
 set -g default-terminal "tmux-256color"
 set -g terminal-overrides ",xterm-256color:RGB"
