--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -49,7 +49,7 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
-bind g new-window -n '🌳' lazygit
+bind g new-window -n '🌳' nvim +Neogit
 bind G new-window -n '😺' ghd
 bind B new-window -n '👷' b
 bind D new-window -n '👷' d
