feat: use syntax that defines binding to <prefix>?

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,6 +12,9 @@ set-option -g focus-events on # TODO: learn how this works
 # TODO: find a way to toggle this?
 set-option -g display-time 3000
 
+# FIX: user action isn't recognized by Wezterm via `run-shell` 😭
+# set-hook -g client-session-changed 'run-shell -t :1 "tmux-session-changed"'
+
 # colors
 set -g default-terminal "tmux-256color"
 set -g terminal-overrides ",xterm-256color:RGB"
@@ -49,8 +52,9 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
-bind g new-window -n '🌳' nvim +Neogit
-bind G new-window -n '😺' ghd
+# TODO: repeat this for all bindings
+bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
+bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
 bind B new-window -n '👷' b
 bind D new-window -n '👷' d
 bind h select-pane -L
