--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -69,7 +69,7 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
-bind-key "K" run-shell "sesh connect $(
+bind-key "K" run-shell "sesh connect --command 'nvim +GoToFile' $(
 	sesh list -tz | fzf-tmux -p 55%,60% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
 		--header '  ^a all ^t tmux ^x zoxide ^f find' \
