--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -72,12 +72,13 @@ bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +
 bind-key "K" run-shell "sesh connect --command 'nvim +GoToFile' $(
 	sesh list -tz | fzf-tmux -p 55%,60% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
-		--header '  ^a all ^t tmux ^x zoxide ^f find' \
+		--header '  ^a all ^t tmux ^x zoxide ^f find ^d kill-session' \
 		--bind 'tab:down,btab:up' \
 		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
 		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
 		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
-		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
 )"
 
 bind-key "Z" display-popup -E "sesh connect \$(sesh list | zf --height 24)"
