feat: update b and d splits

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -55,8 +55,8 @@ bind c new-window -c '#{pane_current_path}'
 # TODO: repeat this for all bindings
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
 bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
-bind B new-window -n '👷' b
-bind D new-window -n '👷' d
+bind -N "⌘+b build" B split-window -v -l 10 b
+bind -N "⌘+d dev" D split-window -v -l 10 d
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
