feat[tmux]: move gitmux to right status

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,7 +7,8 @@
 # Terminal multiplexer
 # https://github.com/tmux/tmux
 
-set-option -g focus-events on # TODO: learn how this works
+# TODO: learn how this works
+set-option -g focus-events on
 
 # TODO: find a way to toggle this?
 set-option -g display-time 3000
@@ -28,11 +29,10 @@ set -g renumber-windows on   # renumber all windows when any window is closed
 set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
 
-set -g status-left "#[fg=blue,bold]#S"
-set -ga status-left " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml)"
+set -g status-left "#[fg=blue,bold]#S "
+set -g status-right " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml)  "
 set -g status-left-length 200    # increase length (from 10)
 set -g status-position top       # macOS / darwin style
-set -g status-right ''           # blank
 set -g status-style 'bg=default' # transparent
 
 set -g window-status-current-format '👉#[fg=magenta]#W'
@@ -76,11 +76,13 @@ bind-key "K" run-shell "sesh connect \"$(
 	sesh list -tz | fzf-tmux -p 55%,60% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
 		--header '  ^a all ^t tmux ^x zoxide ^f find' \
+		--header '  ^a all ^t tmux ^x zoxide ^d tmux kill ^f find' \
 		--bind 'tab:down,btab:up' \
 		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
 		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
 		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
-		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
 )\""
 
 bind-key "Z" display-popup -E "sesh connect \$(sesh list | zf --height 24)"
