--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -17,12 +17,12 @@ tmux:
     branch: "#[fg=white,nobold]"
     staged: "#[fg=green,nobold]"
     conflict: "#[fg=red,nobold]"
-    modified: "#[fg=yellow,nobold]"
+    modified: "#[fg=blue,nobold]"
     untracked: "#[fg=gray,nobold]"
     stashed: "#[fg=gray,nobold]"
     clean: "#[fg=green,nobold]"
     divergence: "#[fg=cyan,nobold]"
-  layout: [branch, divergence, flags, stats, " "]
+  layout: [stats, flags, divergence, branch]
   options:
     branch_max_len: 0
     hide_clean: true
