feat: bind cmd+q to kill session

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,6 +57,7 @@ bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazyg
 bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
 bind -N "⌘+b build" B split-window -v -l 10 b
 bind -N "⌘+d dev" D split-window -v -l 10 d
+bind -N "⌘+Q kill current session" Q kill-session
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
