feat: improve sesh tmux binding

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -74,17 +74,19 @@ bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +
 # NOTE: has icons but is less stable
 # bind-key "K" run-shell "sesh_fzf_tmux_choose"
 bind-key "K" run-shell "sesh connect \"$(
-	sesh list -tz | fzf-tmux -p 55%,60% \
+	sesh list -ictz | fzf-tmux -p 55%,60% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
-		--header '  ^a all ^t tmux ^x zoxide ^f find' \
-		--header '  ^a all ^t tmux ^x zoxide ^d tmux kill ^f find' \
+		--header '  ^a all ^t tmux ^x zoxide ^g config ^d tmux kill ^f find' \
 		--bind 'tab:down,btab:up' \
-		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
-		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
-		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list -i)' \
+		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -it)' \
+		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -ic)' \
+		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -iz)' \
 		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
 		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
 )\""
+# NOTE: can be used for debugging
+# )\" 2> /tmp/sesh-$(date +"%Y-%m-%d-%H-%M-%S").txt"
 
 bind-key "Z" display-popup -E "sesh connect \$(sesh list | zf --height 24)"
 
