feat: update gitmux config
- drop ahead behind icons
- make divergence yellow

--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -11,8 +11,6 @@ tmux:
   symbols:
     branch: " "
     hashprefix: ":"
-    ahead: " "
-    behind: " "
     staged: " "
     conflict: "󰕚 "
     untracked: "󱀶 "
@@ -30,7 +28,7 @@ tmux:
     untracked: "#[fg=gray,nobold]"
     stashed: "#[fg=gray,nobold]"
     clean: "#[fg=green,nobold]"
-    divergence: "#[fg=cyan,nobold]"
+    divergence: "#[fg=yellow,nobold]"
   layout: [stats, flags, divergence, branch]
   options:
     branch_max_len: 0
