feat: drop arrow for asterisk

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,8 +36,8 @@ set -g status-right-length 200   # increase length (from 10)
 set -g status-position top       # macOS / darwin style
 set -g status-style 'bg=default' # transparent
 
-set -g window-status-current-format '👉#[fg=magenta]#W'
-set -g window-status-format '  #[fg=gray]#W'
+set -g window-status-current-format '*#[fg=magenta]#W'
+set -g window-status-format ' #[fg=gray]#W'
 
 set -g allow-passthrough on
 set -ga update-environment TERM
